<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rqt_rviz</name>
  <version>0.6.1</version>
  <description>rqt_rviz provides a GUI plugin embedding <a href = "http://www.ros.org/wiki/rviz">RViz</a>.
    Note that this rqt plugin does NOT supersede RViz but depends on it.
  </description>
  <maintainer email="louise@osrfoundation.org">Louise Poubel</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rqt_rviz</url>
  <url type="repository">https://github.com/ros-visualization/rqt_rviz</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_rviz/issues</url>

  <author>Dorian Scholz</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_cpp</build_depend>
  <build_depend>rviz</build_depend>
  <exec_depend>boost</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_cpp</exec_depend>
  <exec_depend>rviz</exec_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
